--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>FAQ Collapse</title>
   <!--Style-->
   <link rel="stylesheet" href="style.css">
   <!--Style Font-AWesome-->
@@ -15,25 +15,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
-  <div class="container">
     <h1>Perguntas Frequentes</h1>
-    <div class="question-box">
-      <i class="fa-solid fa-angle-down"></i>
-      <i class="fa-solid fa-circle-xmark"></i>
+    <div class="box open">
+      <button class="btn remove"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn"><i class="fa-solid fa-circle-xmark"></i></button>
       <h3>Posso te fazer uma pergunta??</h3>
       <p>Claro, manda ae xD</p>
-      <i class="fa-solid fa-heart"></i>
-      <i class="fa-solid fa-star"></i>
     </div>
-    <div class="question-box">
-      <i class="fa-solid fa-angle-down"></i>
-      <i class="fa-solid fa-circle-xmark"></i>
+    <div class="box">
+      <button class="btn"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn remove"><i class="fa-solid fa-circle-xmark"></i></button>
       <h3>Vai ter live hoje a noite?? Que horas??</h3>
       <p>Vai sim, quando abrir aviso no insta!!</p>
-      <i class="fa-solid fa-heart"></i>
-      <i class="fa-solid fa-star"></i>
     </div>
-  </div>  
+    <div class="box">
+      <button class="btn"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn remove"><i class="fa-solid fa-circle-xmark"></i></button>
+      <h3>Vai ter live hoje a noite?? Que horas??</h3>
+      <p>Vai sim, quando abrir aviso no insta!!</p>
+    </div>
+    <div class="box">
+      <button class="btn"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn remove"><i class="fa-solid fa-circle-xmark"></i></button>
+      <h3>Vai ter live hoje a noite?? Que horas??</h3>
+      <p>Vai sim, quando abrir aviso no insta!!</p>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
