--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
 <body>
     <h1>Perguntas Frequentes</h1>
     <div class="box open">
-      <button class="btn remove"><i class="fa-solid fa-angle-down"></i></button>
-      <button class="btn"><i class="fa-solid fa-circle-xmark"></i></button>
+      <button class="btn remove" id="open"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn" id="close"><i class="fa-solid fa-circle-xmark"></i></button>
       <h3>Posso te fazer uma pergunta??</h3>
       <p>Claro, manda ae xD</p>
     </div>
     <div class="box">
-      <button class="btn"><i class="fa-solid fa-angle-down"></i></button>
-      <button class="btn remove"><i class="fa-solid fa-circle-xmark"></i></button>
+      <button class="btn" id="open"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn remove" id="close"><i class="fa-solid fa-circle-xmark"></i></button>
       <h3>Vai ter live hoje a noite?? Que horas??</h3>
       <p>Vai sim, quando abrir aviso no insta!!</p>
     </div>
     <div class="box">
-      <button class="btn"><i class="fa-solid fa-angle-down"></i></button>
-      <button class="btn remove"><i class="fa-solid fa-circle-xmark"></i></button>
+      <button class="btn" id="open"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn remove" id="close"><i class="fa-solid fa-circle-xmark"></i></button>
       <h3>Vai ter live hoje a noite?? Que horas??</h3>
       <p>Vai sim, quando abrir aviso no insta!!</p>
     </div>
     <div class="box">
-      <button class="btn"><i class="fa-solid fa-angle-down"></i></button>
-      <button class="btn remove"><i class="fa-solid fa-circle-xmark"></i></button>
+      <button class="btn" id="open"><i class="fa-solid fa-angle-down"></i></button>
+      <button class="btn remove" id="close"><i class="fa-solid fa-circle-xmark"></i></button>
       <h3>Vai ter live hoje a noite?? Que horas??</h3>
       <p>Vai sim, quando abrir aviso no insta!!</p>
     </div>
