--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <h1>Perguntas Frequentes</h1>
   <div class="container">
-    <div class="faq active">
-      <h3 class="title">Porque não se usa tabelas?</h3>
+    <div class="faq">
+      <h3 class="title">Porque não se usam tabelas?</h3>
       <p class="text">Porque existem recursos mais modernos e práticos para se usar atualmente em HTM e CSS.</p>
-      <button>
+      <button class="toggle">
         <i class="fa-solid fa-circle-xmark"></i>
         <i class="fa-solid fa-angle-down"></i>
       </button>
@@ -24,7 +24,7 @@
     <div class="faq">
       <h3 class="title">Quantos dias tem um ano?</h3>
       <p class="text">Geralmente, o ano possui 365 dias, com exceção do ano bissexto, onde o ano possui 366 dias.</p>
-      <button>
+      <button class="toggle">
         <i class="fa-solid fa-circle-xmark"></i>
         <i class="fa-solid fa-angle-down"></i>
       </button>
@@ -32,7 +32,7 @@
     <div class="faq">
       <h3 class="title">Qual a distância da lua para a terra?</h3>
       <p class="text">A distância entre a Terra e a Lua é 384.403 quilômetros. No entanto, a distância real é variável, pois dependendo do curso da órbita da lua.</p>
-      <button>
+      <button class="toggle">
         <i class="fa-solid fa-circle-xmark"></i>
         <i class="fa-solid fa-angle-down"></i>
       </button>
@@ -40,7 +40,7 @@
     <div class="faq">
       <h3 class="title">Qual é o menos pais do mundo?</h3>
       <p class="text">Vaticano. Com 0,44 km² de superfície e mil habitantes, o Vaticano é o menor país do mundo.</p>
-      <button>
+      <button class="toggle">
         <i class="fa-solid fa-circle-xmark"></i>
         <i class="fa-solid fa-angle-down"></i>
       </button>
@@ -48,7 +48,7 @@
     <div class="faq">
       <h3 class="title">Qual a lingua mais falada?</h3>
       <p class="text">Inglês. No topo da lista está o inglês, o idioma mais falado do mundo, com mais de 1,2 bilhões de falantes.</p>
-      <button>
+      <button class="toggle">
         <i class="fa-solid fa-circle-xmark"></i>
         <i class="fa-solid fa-angle-down"></i>
       </button>
