--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </button>
     </div>      
     <div class="faq">
-      <h3 class="title">Qual é o menos pais do mundo?</h3>
+      <h3 class="title">Qual é o menor pais do mundo?</h3>
       <p class="text">Vaticano. Com 0,44 km² de superfície e mil habitantes, o Vaticano é o menor país do mundo.</p>
       <button class="toggle">
         <i class="fa-solid fa-circle-xmark"></i>
